# DoPro2

./: .gitignore  LICENSE  README.md  params.yaml  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: actions.yml
artifacts/components/: scale_pca_pipe_windspeed  season_encoder  time_of_day_encoder  windDir_encoder
config/: config.yaml
reasearch/: 00_data_analysis_Doku_jami.ipynb  01_data_ingestion.ipynb  02_01_API_Vorverarbeitung.ipynb  02_Analyse_Json.ipynb  02_Analyse_Json_jami.ipynb  02_Remit_feature_jami.ipynb  02_data_preparation.ipynb  02_feature_remit.ipynb  02_remit_feature.ipynb  03_trainingsdata.ipynb  04_model_training.ipynb  05_model_evaluation.ipynb  06_LSTM.ipynb  06_LSTM_jami.ipynb  06_quantilregression.ipynb  07_prediction.ipynb  dataset.ipynb  juma_colab_da_price_forecast.ipynb  juma_colab_train.ipynb  juma_untersuchung_vorbereitung.ipynb  model_training_0_tom.ipynb  model_training_1_tom.ipynb
src/dopro2_HEFTcom_challenge/: main.py
src/dopro2_HEFTcom_challenge/components/: __init__.py  data_ingestion.py  data_preparation.py  evaluation.py  prediction.py  training.py
src/dopro2_HEFTcom_challenge/config/: __init__.py  configuration.py  logger.py
src/dopro2_HEFTcom_challenge/constants/: __init__.py
src/dopro2_HEFTcom_challenge/entity/: __init__.py  config_entity.py  rebase_api.py
src/dopro2_HEFTcom_challenge/pipeline/: __init__.py  stage_01_data_ingestion.py  stage_02_data_preparation.py  stage_03_training.py  stage_04_evaluation.py  stage_05_prediction.py
src/dopro2_HEFTcom_challenge/utils/: __init__.py  rebase_api.py  utils.py
