[project]
name = "dopro2_HEFTcom_challenge"
version = "2024.10.0"
description = "Hybrid energy forecasting and trading competition"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "Python",
    "Machine Learning",
    "Forecasting",
    "IEEEDataPort"
]
authors = [
    { name = "Tom Beihofer", email = "tom@sirius23.de" },
    { name = "Manuel Jung", email = "manuel@frandju.de" },
    { name = "Michael", email = "sdf@sdf.de" }
]
maintainers = [
    { name = "Tom Beihofer", email = "tom@sirius23.de" },
    { name = "Manuel Jung", email = "manuel@frandju.de" },
    { name = "Michael", email = "sdf@sdf.de" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cramjam==2.8.4",
    "cycler==0.12.1",
    "debugpy==1.8.6",
    "decorator==5.1.1",
    "executing==2.1.0",
    "fastjsonschema==2.20.0",
    "fastparquet==2024.5.0",
    "filelock==3.16.1",
    "fonttools==4.54.1",
    "frozenlist==1.4.1",
    "fsspec==2024.9.0",
    "gdown==5.2.0",
    "h5netcdf==1.3.0",
    "h5py==3.12.1",
    "idna==3.10",
    "jedi==0.19.1",
    "jmespath==1.0.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "kiwisolver==1.4.7",
    "loguru==0.7.2",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "multidict==6.1.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numpy==2.1.1",
    "packaging==24.1",
    "pandas==2.2.3",
    "parso==0.8.4",
    "patsy==0.5.6",
    "pillow==10.4.0",
    "platformdirs==4.3.6",
    "prompt_toolkit==3.0.48",
    "psutil==6.0.0",
    "pure_eval==0.2.3",
    "pyaml==24.9.0",
    "Pygments==2.18.0",
    "pyparsing==3.1.4",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pywin32==307",
    "PyYAML==6.0.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.20.0",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "setuptools==75.1.0",
    "six==1.16.0",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "statsmodels==0.14.3",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "traitlets==5.14.3",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "win32-setctime==1.1.0",
    "wrapt==1.16.0",
    "xarray==2024.9.0",
    "yarl==1.13.1"
]

[project.optional-dependencies]
test = [
    "pytest==8.1.1",
    "import-ipynb==0.1.4",
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
]
quality = [
    # http://www.mypy-lang.org
    "mypy == 1.9.0",
    "mypy-extensions == 1.0.0",
    # https://github.com/PyCQA/pylint (Python Code Quality Authority)
    "pylint == 3.1.0",
    # https://github.com/PyCQA/flake8 (Wrapper um pyflakes)
    # https://github.com/charliermarsh/ruff
    "flake8 == 7.0.0",
    # https://github.com/PyCQA/flake8-bugbear
    "flake8-bugbear == 24.2.6",
    # https://github.com/sco1/flake8-annotations
    "flake8-annotations == 3.0.1",
    # https://github.com/gforcada/flake8-builtins
    "flake8-builtins == 2.4.0",
    # https://github.com/adamchainz/flake8-comprehensions
    "flake8-comprehensions == 3.14.0",
    # https://github.com/PyCQA/flake8-docstrings
    "flake8-docstrings == 1.7.0",
    # https://github.com/adamchainz/flake8-logging
    "flake8-logging == 1.6.0",
    # https://pypi.org/project/Flake8-pyproject
    # https://github.com/PyCQA/flake8/issues/234
    "Flake8-pyproject == 1.2.3",
    # https://pycqa.github.io/isort
    "isort == 5.13.2",
    # https://github.com/psf/black
    "black == 24.3.0",
    # https://github.com/hhatto/autopep8
    #"autopep8 == 2.0.1",
    # http://www.pydocstyle.org
    "pydocstyle[toml] == 6.3.0",
    # https://github.com/dosisod/refurb
]

[project.urls]
homepage = "https://ieee-dataport.org/competitions/hybrid-energy-forecasting-and-trading-competition"
documentation = "https://readthedocs.org"
repository = "https://github.com/tombeihofer23/DoPro2"

[tool.mypy]
python_version = "3.12.6"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = "(?x)(^dopro2_HEFTcom_challenge/conf\\.py$)"
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
exclude = ["**/__pycache__"]

[tool.pylint.main]
py-version = "3.12"
argument-rgx = "^[a-z][a-z0-9_]*$"
attr-rgx = "^[a-z][a-z0-9_]*$"
confidence = []
disable = [
    "invalid-name",
    "missing-function-docstring",
    "no-member",
    "no-name-in-module",
    "redefined-builtin",
    "too-many-instance-attributes",
    "wrong-import-order",
]
ignore-patterns = "^test_|_test.py$"
include-naming-hint = true
jobs = 4
#persistent = "False"

[tool.pylint.design]
min-public-methods = 0

[tool.pylint.format]
expected-line-ending-format = "LF"
indent-string = "    "
max-line-length = 88

[tool.pylint.string]
check-quote-consistency = true

[tool.pylint.variables]
init-import = true

# https://flake8.pycqa.org/en/latest/user/configuration.html
# https://flake8.pycqa.org/en/latest/user/options.html#options-and-their-descriptions
[tool.flake8]
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
# https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-select
select = ["C", "E", "F", "W", "B", "B902", "B903", "B904", "B950"]
# https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-extend-ignore
extend-ignore = ["E203", "F821", "W503"]
# https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-per-file-ignores
per-file-ignores = ["app/banner.py:E501"]

# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
[tool.isort]
profile = "black"
py_version = 311

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#strings
[tool.black]
target-version = ["py312"]
line-length = 88

# https://pep8.readthedocs.io/en/release-1.7.x/intro.html#configuration
[tool.autopep8]
max_line_length = 88

